# yuta_logagent

./: .env.example  .gitignore  CHANGELOG_SOURCE_MANAGEMENT.md  README.md  ROLLBACK_TO_GEMINI.md  SETUP.md  check_embeddings.py  debug_chromadb.py  init_db.py  main.py  pyproject.toml  show_available_dates.py  test_date_search.py  test_retrieval.py  test_search.py  users.db
docs/: ARCHITECTURE.md  CHROMADB_QUICKSTART.md  CHROMADB_SERVER_SETUP.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_LOG.md  GIT_SYNC_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  USER_GUIDE.md  agent_prompt_example.md
docs/superpowers/plans/: 2026-07-24-phase1-infrastructure.md
docs/superpowers/specs/: 2026-07-24-refactoring-design.md
logs/: 2026.05.14_log.md  2026.06.29_log.md  2026.07.09_log.md  2026.07.14_log.md
src/: controller.py  embedding_optimizer.py  llm_router.py  llm_router_litellm.py  router.py  tools.py
static/: README.md  index.html
storage/: auth.py  database.py  models.py
templates/: log_maker.html  login.html  settings.html  user_page.html
