[project]
name = "yuta-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.139.0",
    "langchain-anthropic>=1.4.8",
    "langchain-codex-oauth>=1.0.0",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.8",
    "langsmith>=0.9.8",
    "uvicorn>=0.30.0",
    "langchain-community>=0.4.2",
    "langchain-unstructured>=1.0.1",
    "langchain-chroma>=1.1.0",
    "chromadb>=0.5.0",
    "jq>=1.11.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
]
